--- a/index.html
+++ b/index.html
@@ -73,19 +73,56 @@
           <th>Attribute</th>
 	  <th>Name</th>
 	  <th>Description</th>
-	</tr>
+        </tr>
       </thead>
       <tbody>
-       <tr>
-         <td>colspan</td>
-	 <td>Column Span</td>
-	 <td>Defines how many columns a td element should span.</td>
-       </tr>
-       <tr>
-         <td>rowspan</td>
-	 <td>Row Span</td>
-	 <td>Defines how many rows a td element should span.</td>
-       </tr>
+        <tr>
+          <td>colspan</td>
+	  <td>Column Span</td>
+	  <td>Defines how many columns a td element should span.</td>
+        </tr>
+        <tr>
+          <td>rowspan</td>
+	  <td>Row Span</td>
+	  <td>Defines how many rows a td element should span.</td>
+        </tr>
+    </table>
+
+        <h3>Link States Order</h3>
+
+        <table>
+	  <thead>
+	    <tr>
+	      <th>Tag</th>
+	      <th>Name</th>
+	      <th>Description</th>
+	    </tr>
+	  </thead>
+
+	  <tbody>
+            <tr>
+              <td>&colon;link</td>
+	      <td>Link</td>
+	      <td>Matches links that have not yet been visited.</td>
+	    </tr>
+            <tr>
+              <td>&colon;visited</td>
+	      <td>Visited</td>
+	      <td>Matches links that have been visited.</td>
+            </tr>
+            <tr>
+              <td>&colon;hover</td>
+	      <td>Hover</td>
+	      <td>Matches when a user designates an item with a pointing device</td>
+	    </tr>  
+            <tr>
+              <td>&colon;active</td>
+	      <td>Active</td>
+	      <td>Matches when an item is being activated by the user.</td>
+            </tr>
+	  </tbody>
+	</table>
+
       </tbody>
     </table>
 
